<?xml version="1.0"?>
<package>
  <name>testbed_gs</name>
  <version>0.0.0</version>
  <description>The testbed_gs package</description>

  <maintainer email="Bara.Emran@gmail.com">Bara Emran</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/BEmran/testbed_gs.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>

